src/test/deca/context/invalid/improvided/methodCall_type.deca
// Description:
//   Appel d'une méthode sur une expression de type invalide
//
// Résultats:
//   Erreur Contextuelle
//   Ligne 16: You cannot apply the given method on a such class.

class A {
       int setX(float z, int y){}
}
class B {
    protected float r;
}
{
   B b = new B();
   b.setX(3.2,2);
}
